# frate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  execute.rs  installer.rs  lib.rs  lock.rs  main.rs  registry.rs  shims.rs  toml.rs  util.rs
src/global/: cache.rs  mod.rs  utils.rs
tests/: cli_tests.rs  tests.rs
