[package]
name = "frate"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
toml = {version = "0.9.2", features = ["serde"]}
reqwest = {version = "0.12.22", features = ["blocking"]}
tempfile = "3.20.0"
zip = "4.3.0"
flate2 = "1.1.2"
tar = "0.4.44"
sha2 = "0.11.0-rc.0"
hex = "0.4.3"