[package]
name = "frate"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/konni332/frate"
homepage = "https://github.com/konni332/frate"
documentation = "https://github.com/konni332/frate#readme"
description = "A local, dev-focused package manager for developer tools, inspired by Scoop and Cargo"
keywords = ["package-manager", "devtools", "cli", "installer", "rust"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-*",]


[[bin]]
name = "frate"
path = "src/main.rs"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
toml = {version = "0.9.2", features = ["serde"]}
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
tempfile = "3.20.0"
zip = "4.3.0"
flate2 = "1.1.2"
tar = "0.4.44"
sha2 = "0.11.0-rc.0"
hex = "0.4.3"
clap = {version = "4.5.41", features = ["derive"]}
semver = "1.0.26"
anyhow = {version = "1.0.98"}
walkdir = "2.5.0"
regex = "1.11.1"
verbosio = { version = "0.3.0", features = ["color"] }
directories = "6.0.0"
colored = "3.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"
